--- a/Concretos/Views/Home/Index.cshtml
+++ b/Concretos/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<br/><br/>
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienveniodo a QualitySolid!!</h1>
+    <p>En esta aplicación podras gestionar tus estudios y gestioanr los calculos necesarios.</p>
 </div>
