Se guarda usuario en el localStorage
* Al iniciar sesión, si pasa el parámetro user_id por get, se guarda
  este parámetro en el localStorage.

* Se crea campo de tipo hidden en creación de estudios para guardar el
  user id.

* Se habilita la posibilidad de null al objeto User en el modelo User
  (Cambio temporal) para que se puedan gudar los estudios.

--- a/Concretos/Views/Shared/_Layout.cshtml
+++ b/Concretos/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 <div class="d-flex">
 
                     <div class="btn-group">
-                        <button type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                        <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
                             <span>
                                 <i class="fa-solid fa-user"></i>
                             </span>
@@ -50,7 +50,7 @@
             <div class="side-bar d-flex flex-column flex-shrink-0 p-3 bg-white">
                 <ul class="nav nav-pills flex-column">
                     <li>
-                        <a href="#" class="nav-link side-bar-link text-dark" asp-controller="User" asp-action="Index">
+                        <a class="nav-link side-bar-link text-dark" asp-controller="User" asp-action="Index">
                             <span>
                                 <i class="fa-sharp fa-solid fa-users"></i>
                                 @labels["users"]
@@ -58,7 +58,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link side-bar-link text-dark" aria-current="page" asp-controller="Study" asp-action="Index">
+                        <a class="nav-link side-bar-link text-dark" aria-current="page" asp-controller="Study" asp-action="Index">
                             <span>
                                 <i class="fa-solid fa-chart-pie"></i>
                                 @labels["studies"]
