--- a/Concretos/Views/Study/Create.cshtml
+++ b/Concretos/Views/Study/Create.cshtml
@@ -1,9 +1,10 @@
 ﻿@model Study;
 
-<form method="post">
+<form method="post" asp-controller="Study" asp-action="Create" autocomplete="off">
+	<input id="user-id" type="hidden" asp-for="UserId" />
 	<div class="border p-3 mt-4">
 		<div class="row pb-2">
-			<h2 class="text-primary">Crear Estudio</h2>
+			<h2 class="text-primary">Crear estudio</h2>
 			<hr/>
 		</div>
 		<div class="mb-3">
