--- a/Concretos/Views/User/Create.cshtml
+++ b/Concretos/Views/User/Create.cshtml
@@ -6,7 +6,7 @@
 <form method="post">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Create Category</h2>
+            <h2 class="text-primary">Crear usuario</h2>
             <hr />
         </div>
         <div class="mb-3">
