--- a/Concretos/Views/User/Index.cshtml
+++ b/Concretos/Views/User/Index.cshtml
@@ -11,7 +11,7 @@
             <h2 class="text-primary">Lista de Usuarios</h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+            <a asp-controller="User" asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i>&nbsp;  Añadir usuario
             </a>
         </div>
