--- a/Concretos/Views/User/Create.cshtml
+++ b/Concretos/Views/User/Create.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Create";
 }
 
-<form method="post">
+<form method="post" class="small-form">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">Crear usuario</h2>
@@ -19,10 +19,16 @@
             <input asp-for="Password" class="form-control" />
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Agregar</button>
-        <a asp-controller="User" asp-action="Index" class="btn btn-secondary" style="width:150px">
-            Regresar
-        </a>
+
+        <hr />
+
+        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+            <button type="submit" class="btn btn-primary" style="width:150px">Agregar</button>
+            <a asp-controller="User" asp-action="Index" class="btn btn-secondary" style="width:150px">
+                Regresar
+            </a>
+        </div>
+
     </div>
 </form>
 
