--- a/Concretos/Views/Measure/Management.cshtml
+++ b/Concretos/Views/Measure/Management.cshtml
@@ -25,6 +25,8 @@
 
 <form asp-controller="Measure" asp-action="Management" id="form-measure" method="post" autocomplete="off">
 
+    <input type="hidden" class="form-control" asp-for="StudyId">
+
     @if (Model.Id > 0)
     {
         <h1>@labels["measure"] @Model.Consecutive</h1>
@@ -103,7 +105,7 @@
 
                 <div class="input-group">
                     <input type="text" class="form-control" id="experimental-porosity" asp-for="ExperimentalPorosity">
-                    <button type="button" class="btn btn-outline-success" id="btn-calculate">@labels["calculationButton"]</button>
+                    <button type="button" class="btn btn-outline-primary" id="btn-calculate">@labels["calculationButton"]</button>
                 </div>
 
             </div>
@@ -126,14 +128,14 @@
 
         @if (Model.Id > 0)
         {
-            <button class="btn btn-primary me-md-2" type="submit">@labels["experimentalDataButton"]</button>
+            <button class="btn small-btn btn-primary me-md-2" type="submit">@labels["experimentalDataButton"]</button>
         }
 
-        <button class="btn btn-success me-md-2" type="submit">@labels["saveButton"]</button>
+        <button class="btn small-btn btn-success me-md-2" type="submit">@labels["saveButton"]</button>
 
         @if (Model.Id > 0)
         {
-            <button class="btn btn-danger" type="button">@labels["deleteButton"]</button>
+            <button class="btn small-btn btn-danger" type="button">@labels["deleteButton"]</button>
         }
 
     </div>
@@ -156,14 +158,15 @@
 
         <tbody>
 
-            @for(int i = 0; i <= 100; i++)
+            @foreach (Measure measure in ViewData["Measures"] as List<Measure>)
             {
                 <tr>
-                    <td>@i</td>
-                    <td>01/02/2023</td>
-                    <td>15%</td>
-                    <td>3,7%</td>
+                    <td>@measure.Consecutive</td>
+                    <td>@measure.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@measure.ExperimentalPorosity%</td>
+                    <td>0%</td>
                 </tr>
+
             }
 
         </tbody>
