--- a/Concretos/Views/Shared/_Layout.cshtml
+++ b/Concretos/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -47,7 +47,7 @@
 
     <div class="container-fluid row flex-nowrap">
         <div class="col-2">
-            <div class="side-bar d-flex flex-column flex-shrink-0 p-3 bg-white">
+            <div class="side-bar d-flex flex-column flex-shrink-0 p-3">
                 <ul class="nav nav-pills flex-column">
                     <li>
                         <a class="nav-link side-bar-link text-dark" asp-controller="User" asp-action="Index">
