--- a/Concretos/Views/User/Create.cshtml
+++ b/Concretos/Views/User/Create.cshtml
@@ -11,12 +11,12 @@
         </div>
         <div class="mb-3">
             <label asp-for="Email"></label>
-            <input asp-for="Email" class="form-control" />
+            <input type="email" asp-for="Email" class="form-control" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="Password"></label>
-            <input asp-for="Password" class="form-control" />
+            <input type="password" asp-for="Password" class="form-control" />
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
 
