Correcciones en creación de usuarios
* Se cambia el diseño, distribuyendo los campos en todo el ancho del
  formulario de usuarios.

* Se crean los campos de nombres y apellidos.

* Se agrega campo de confirmación de contraseña.

* Se agregan validaciones en español.

--- a/Concretos/Views/Access/Login.cshtml
+++ b/Concretos/Views/Access/Login.cshtml
@@ -16,17 +16,20 @@
     <form class="small-form" asp-controller="Access" asp-action="Login" method="post">
         <h1 style="color: #1976D2;">Login</h1>
         <label for="email" style="color: #1976D2;">Correo:</label>
-        <input type="email" id="email" placeholder="Correo" asp-for="Email" required>
+        <input type="email" class="form-control" id="email" placeholder="Correo" asp-for="Email" required>
         <br>
         <label for="password" style="color: #1976D2;">Contraseña:</label>
-        <input type="password" id="password" placeholder="Contraseña" asp-for="Password" required>
+        <input type="password" id="password" class="form-control" placeholder="Contraseña" asp-for="Password" required>
         <br>
         <label>
             <input type="checkbox" asp-for="KeepLoggedIn" style="margin-top: 10px; margin-right: 5px;">
             <span style="color: #1976D2;">Mantener sesión iniciada</span>
         </label>
         <br>
-        <button class="btn btn-primary me-md-2" type="submit">Iniciar sesión</button>
+
+        <div class="d-grid gap-2">
+            <button class="btn btn-primary me-md-2" type="submit">Iniciar sesión</button>
+        </div>
 
         @if (ViewData["ValidateMessage"] != null)
         {
