Se agregan validaciones al formulario de medidas

--- a/Concretos/Views/Measure/Management.cshtml
+++ b/Concretos/Views/Measure/Management.cshtml
@@ -65,6 +65,11 @@
                 }
 
             </select>
+
+        </div>
+
+        <div class="col-sm-5">
+            <span asp-validation-for="FabricationMethodId" class="text-danger"></span>
         </div>
 
     </div>
@@ -94,6 +99,10 @@
 
         </div>
 
+        <div class="col-sm-5">
+            <span asp-validation-for="ReactiveId" class="text-danger"></span>
+        </div>
+
     </div>
 
     <div class="shadow p-3 mb-2">
@@ -107,6 +116,8 @@
                     <input type="text" class="form-control" id="experimental-porosity" asp-for="ExperimentalPorosity">
                     <button type="button" class="btn btn-outline-primary" id="btn-calculate">@labels["calculationButton"]</button>
                 </div>
+
+                <span asp-validation-for="ExperimentalPorosity" class="text-danger"></span>
 
             </div>
 
@@ -128,14 +139,23 @@
 
         @if (Model.Id > 0)
         {
-            <button class="btn small-btn btn-primary me-md-2" type="submit">@labels["experimentalDataButton"]</button>
+            <button class="btn small-btn btn-primary me-md-2" type="submit">
+                <i class="fas fa-vial"></i>
+                @labels["experimentalDataButton"]
+            </button>
         }
 
-        <button class="btn small-btn btn-success me-md-2" type="submit">@labels["saveButton"]</button>
+        <button class="btn small-btn btn-primary me-md-2" type="submit">
+            <i class="fas fa-save"></i>
+            @labels["saveButton"]
+        </button>
 
         @if (Model.Id > 0)
         {
-            <button class="btn small-btn btn-danger" type="button">@labels["deleteButton"]</button>
+            <button class="btn small-btn btn-danger" type="button">
+                <i class="fas fa-trash-alt"></i>
+                @labels["deleteButton"]
+            </button>
         }
 
     </div>
@@ -144,7 +164,7 @@
 
 <div id="table-measures">
     <table class="table table-bordered">
-        
+
         <thead>
 
             <tr>
@@ -173,3 +193,9 @@
 
     </table>
 </div>
+
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
