Actualizacion y elminacion de un usuario

--- a/Concretos/Views/Shared/_Layout.cshtml
+++ b/Concretos/Views/Shared/_Layout.cshtml
@@ -88,6 +88,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/measure.js"></script>
+    <script src="~/js/user.js"></script>
     <script src="~/js/util.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
