--- a/Concretos/Views/User/Create.cshtml
+++ b/Concretos/Views/User/Create.cshtml
@@ -17,7 +17,7 @@
 <form method="post" autocomplete="off">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Crear usuario</h2>
+            <h2 class="text-primary">Usuario</h2>
             <hr />
         </div>
 
